@@ -17,6 +17,7 @@
     <File name="./src/Application.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/Logger.cs" subtype="Code" buildaction="Compile" />
     <File name="./src/Utilities.cs" subtype="Code" buildaction="Compile" />
+    <File name="./src/Defines.cs.in" subtype="Code" buildaction="Nothing" />
   </Contents>
   <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am">
     <BuildFilesVar />
